build(package): add author and license

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "jornada-dev",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
+  "author": {
+    "name": "Cauê Mustafá",
+    "email": "cauemustafa@live.com",
+    "url": "https://cauemustafa.me"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
